updates for layout bugs in bios and case study

--- a/assets/css/bios.styl
+++ b/assets/css/bios.styl
@@ -289,6 +289,9 @@ $StickyOffset = 40vh
 		width 95%
 		height 250px
 
+	#bios-title p
+		visibility hidden
+
 	.bios-content 
 		max-width 450px
 		min-width 300px
@@ -297,7 +300,7 @@ $StickyOffset = 40vh
 	.bios-content img
 		// clip-path inset(0 0 30% 0)
 		filter opacity(50%)
-		padding-bottom calc(45vw)
+		padding-bottom calc(35vw)
 		// height 475px
 		
 	.copy
@@ -326,6 +329,9 @@ $StickyOffset = 40vh
 		width 95%
 		height 250px
 
+	#bios-title p
+		visibility hidden
+
 	.bios-content 
 		max-width 450px
 		min-width 300px
@@ -334,7 +340,7 @@ $StickyOffset = 40vh
 	.bios-content img
 		// clip-path inset(0 0 30% 0)
 		filter opacity(50%)
-		padding-bottom calc(45vw)
+		padding-bottom calc(35vw)
 		// height 475px
 		
 	.copy
