--- a/assets/css/endeavor.styl
+++ b/assets/css/endeavor.styl
@@ -1926,7 +1926,7 @@ p.center-caption
 /* Breakpoint 1 | Medium Screen */
 
 /* ----------- Non-Retina Screens ----------- */
-@media screen and (max-width: 1100px) and (min-resolution: 1dppx) and (min-resolution: 96dpi)		
+@media screen and (max-width: 1025px) and (min-resolution: 1dppx) and (min-resolution: 96dpi)		
 	.endeavor-overview .description 
 		margin-left auto
 		margin-right auto
@@ -2066,7 +2066,7 @@ p.center-caption
 		
 
 /* ----------- Retina Screens ----------- */
-@media screen and (max-width: 1100px) and (min-resolution: 2dppx) and (min-resolution: 192dpi)
+@media screen and (max-width: 1025px) and (min-resolution: 2dppx) and (min-resolution: 192dpi)
 	.endeavor-overview .description 
 		margin-left auto
 		margin-right auto
@@ -2460,6 +2460,9 @@ p.center-caption
 		
 	.endeavor
 		min-width 104vw
+
+	.endeavor-overview
+		height calc(100vw * 1.5)
 		
 	.endeavor-contents
 		margin-top 70px
@@ -2495,7 +2498,7 @@ p.center-caption
 		left -1%
 		padding 0
 		padding 10%
-		top -15%
+		top 0
 		box-shadow none
 		
 		height 150px
@@ -2578,6 +2581,9 @@ p.center-caption
 		
 	.endeavor
 		min-width 104vw
+
+	.endeavor-overview
+		height calc(100vw * 1.5)
 		
 	.endeavor-contents
 		margin-top 70px
@@ -2613,7 +2619,7 @@ p.center-caption
 		left -1%
 		padding 0
 		padding 10%
-		top -15%
+		top 0
 		box-shadow none
 		
 		height 150px
