--- a/assets/css/works.styl
+++ b/assets/css/works.styl
@@ -115,6 +115,27 @@ $F-padding = 15px
 	position absolute
 
 
+/*---------------------------------------------------------------*/
+/* Breakpoint 2 | Tiny Screen && Mobile */
+
+/* ----------- Non-Retina Screens ----------- */
+@media screen and (max-width: 500px) and (min-resolution: 1dppx) and (min-resolution: 96dpi)	
+	#works
+		padding-top 5vh
+		
+		
+
+/* ----------- Retina Screens ----------- */
+@media screen and (max-width: 500px) and (min-resolution: 2dppx) and (min-resolution: 192dpi)
+	#works
+		padding-top 5vh
+
+		
+
+
+
+
+
 
 
 
